# conpaas

./: .gitignore  .travis.yml  AUTHORS.txt  HOWTO.txt  LICENSE.txt  PACKAGING-INSTRUCTIONS.txt  README.txt  cpsupdate.sh  cpsupdate_nutshell.sh  create-new-service-from-blueprints.sh  mkcpstools.sh  mkdist.sh  mkpackage.sh  pom.xml  travis.sh
bag-of-tasks/: readme.txt
bag-of-tasks/manager/: init.sh
branches/conpaas-dailybuild/: BRANCH_README  Makefile
branches/opentestbed-web-interface/: LocalService.php  MapredPage.php  Page.php  ServiceData.php  ServiceFactory.php  ServicesListUI.php  UserData.php  __init__.php  configure.php  create.php  index.php  login.php
branches/opentestbed-web-servers/: agent-config.cfg  conpaas_web_deps
conpaas-client/: cpsclient.py  setup.py
conpaas-client/cps/: base.py  galera.py  generic.py  hadoop.py  hadoopnaas.py  helloworld.py  htc.py  htcondor.py  java.py  mysql.py  php.py  scalaris.py  selenium.py  taskfarm.py  web.py  xtreemfs.py
conpaas-director/: MANIFEST.in  Makefile  README  actions.py  add-user-columns-to-db.sh  add-uuid-column-to-db.sh  adduser.py  app.py  client.py  cloud.py  common.py  cpsadduser.py  cpscheck.py  cpsconf.py  director.cfg.example  director.cfg.multicloud  director.cfg.multicloud-example  director.wsgi  install.sh  requirements.txt  setup.py  test.py  unit-tests.sh  x509cert.py
conpaas-director/cpsdirector/: __init__.py  application.py  cloud.py  common.py  credits.py  debug.py  director.py  get_external_idps.py  idp.py  manifest.py  nestedapi.py  service.py  user.py  x509cert.py
conpaas-director/functional-tests/: run-all.sh
conpaas-frontend/: LICENSE.txt  README.txt  install.sh  pom.xml
conpaas-frontend/conf/: apache.conf.sample  aws.ini  main.ini  opennebula.ini  welcome.txt
conpaas-frontend/scripts/: frontend-db.sql  generate-certs.php  install.sh
conpaas-frontend/www/: .gitignore  __init__.php  addservice.php  (+22 more)
conpaas-mysql/: LICENSE.txt  Makefile  README.txt  pom.xml  setup.py
conpaas-services/: mkarchive.sh  mkpackage.sh
conpaas-taskfarm/: Makefile  compile.sh  conpaas-taskfarm  pom.xml
conpaas-web/: README.txt  conpaas_web_deps  pom.xml
cps-api/: README  extract_api.sh
cps-tools/: MANIFEST.in  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac  cps-tools.conf  cps-tools.sh  setup.py  test.sh  test2.sh  unit-tests.sh
cps-tools/bash_completion.d/: cps-tools
cps-tools/src/: Makefile.am  Makefile.in
cps-tools/src/cps_tools/: Makefile.am  Makefile.in  application.py  base.py  cloud.py  config.py  cps_tools.py  director.py  flink.py  galera.py  generic.py  helloworld.py  htc.py  java.py  mysql.py  php.py  scalaris.py  selenium.py  service.py  taskfarm.py  user.py  web.py  xtreemfs.py
cps-tools/test/: test_config.py  test_suite.py
doc/: Makefile  adminguide.tex  api.tex  conpaas.css  conpaasdoc.tex  index.html  index.tex  installation.html  installation.tex  installation_0.html  installation_toc.html  internals.tex  userguide.html  userguide.tex  userguide_0.html  userguide_toc.html
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  internals.rst  introduction.rst  manifest.rst  manual.rst  userguide.rst
frontend/: README.txt
generic-service-example/: README.txt  emdros-install.sh  init-2.sh  init.sh  log.sh  logtest-1.sh  logtest.sh  mql-test.sh  start-2.sh  start.sh  testrun
grid5000/: README  conpaas-squeeze-vmimage.one  deploy-start-clouds.sh  deploy-start-conpaas.sh
trunk/: AUTHORS.txt  PACKAGING-INSTRUCTIONS.txt  README.txt
web-servers/: conpaas_web_deps
(+1854 files in other folders)
