## files to byte-compile
dist_cpstools_PYTHON = \
	__init__.py \
	application.py \
	base.py \
	cloud.py \
	cps_tools.py \
	config.py \
	java.py \
	galera.py \
	htc.py \
	mysql.py \
	php.py \
	scalaris.py \
	selenium.py \
	service.py \
	taskfarm.py \
	user.py \
	xtreemfs.py \
	web.py

## destination of byte-compiled files
cpstoolsdir = $(pythondir)/cps_tools

