## files to byte-compile
dist_cpstools_PYTHON = \
	__init__.py \
	application.py \
	base.py \
	cloud.py \
	cps_tools.py \
	config.py \
	java.py \
	mysql.py \
	php.py \	
	service.py \
	taskfarm.py \
	user.py \
	xtreemfs.py \
	helloworld.py \
	generic.py \
	web.py

##htc.py \
##scalaris.py \
##selenium.py \

## destination of byte-compiled files
cpstoolsdir = $(pythondir)/cps_tools

